--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,9 +30,8 @@ repos:
         #RA: the PR requiring approval by a team designated to gate changes to this file, specifically attempts to exclude
         #RA: new key additions.
         #RA Developer Status: Mitigated
-        #RA Validator Status: {RA Accepted, Return to Developer, Known Issue, Mitigated, False Positive, Bad Practice}
-        #RA Validator: jneuner@mitre.org
-        #RA Modified Severity:
+        #RA Validator Status: Mitigated
+        #RA Modified Severity: CAT III
         exclude: >
           (?x)^(
             config/tls/devlocal-ca.key$|
