--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1095,7 +1095,7 @@ paths:
         - in: query
           name: sort
           type: string
-          enum: [ lastName, moveID, submittedAt, branch, status, dodID]
+          enum: [ lastName, moveID, submittedAt, branch, status, dodID, age]
         - in: query
           name: order
           type: string
