remove status alpha ordering in test, add descriptions to yaml

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1096,10 +1096,12 @@ paths:
           name: sort
           type: string
           enum: [ lastName, moveID, submittedAt, branch, status, dodID, age]
+          description: field that results should be sorted by
         - in: query
           name: order
           type: string
           enum: [ asc, desc ]
+          description: direction of sort order if applied
         - in: query
           name: page
           type: integer
