--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -883,6 +883,7 @@ jobs:
       - restore_cache:
           keys:
             - v3-mymove-node-modules-{{ checksum "yarn.lock" }}
+      - run: go -version
       - run: make bin/rds-ca-2019-root.pem
       - run: make bin/rds-ca-us-gov-west-1-2017-root.pem
       - run: make client_build
