Revert "Deploy to exp for testing"
This reverts commit e4ee0e865a517ccb1377c7df9adf1f2b82ff0580.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1297,7 +1297,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: gdjn_yarn_frozen_lockfile
+              ignore: placeholder_branch_name
 
       - integration_tests_mtls:
           requires:
@@ -1311,7 +1311,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: gdjn_yarn_frozen_lockfile
+              ignore: placeholder_branch_name
 
       - client_test:
           requires:
@@ -1319,7 +1319,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: gdjn_yarn_frozen_lockfile
+              ignore: placeholder_branch_name
 
       - server_test:
           requires:
@@ -1327,7 +1327,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: gdjn_yarn_frozen_lockfile
+              ignore: placeholder_branch_name
 
       - build_app:
           requires:
@@ -1367,21 +1367,21 @@ workflows:
             - build_app
           filters:
             branches:
-              only: gdjn_yarn_frozen_lockfile
+              only: placeholder_branch_name
 
       - push_migrations_exp:
           requires:
             - build_migrations
           filters:
             branches:
-              only: gdjn_yarn_frozen_lockfile
+              only: placeholder_branch_name
 
       - push_tasks_exp:
           requires:
             - build_tasks
           filters:
             branches:
-              only: gdjn_yarn_frozen_lockfile
+              only: placeholder_branch_name
 
       - deploy_exp_migrations:
           requires:
@@ -1395,28 +1395,28 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: gdjn_yarn_frozen_lockfile
+              only: placeholder_branch_name
 
       - deploy_exp_tasks:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: gdjn_yarn_frozen_lockfile
+              only: placeholder_branch_name
 
       - deploy_exp_app:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: gdjn_yarn_frozen_lockfile
+              only: placeholder_branch_name
 
       - deploy_exp_app_client_tls:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: gdjn_yarn_frozen_lockfile
+              only: placeholder_branch_name
 
       - push_app_stg:
           requires:
