--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -188,6 +188,53 @@ paths:
           $ref: '#/responses/UnprocessableEntity'
         '500':
           $ref: '#/responses/ServerError'
+  '/move-task-orders/{moveTaskOrderID}/hide':
+    parameters:
+      - description: UUID of move task order.
+        in: path
+        name: moveTaskOrderID
+        required: true
+        type: string
+    patch:
+      summary: hideMoveTaskOrder
+      description: |
+        Updates move task order without fake user data `show` to false. No request body required. <br />
+        <br />
+        This is a support endpoint and will not be available in production.
+      operationId: hideMoveTaskOrder
+      tags:
+        - moveTaskOrder
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: header
+          name: If-Match
+          type: string
+          required: true
+          description: >
+            Optimistic locking is implemented via the `If-Match` header. If the ETag header does not match
+            the value of the resource on the server, the server rejects the change with a `412 Precondition Failed` error.
+      responses:
+        '200':
+          description: Successfully hid MTO.
+          schema:
+            $ref: '#/definitions/MoveTaskOrder'
+        '400':
+          $ref: '#/responses/InvalidRequest'
+        '401':
+          $ref: '#/responses/PermissionDenied'
+        '403':
+          $ref: '#/responses/PermissionDenied'
+        '404':
+          $ref: '#/responses/NotFound'
+        '412':
+          $ref: '#/responses/PreconditionFailed'
+        '422':
+          $ref: '#/responses/UnprocessableEntity'
+        '500':
+          $ref: '#/responses/ServerError'
   /move-task-orders/{moveTaskOrderID}/payment-requests:
     get:
       summary: listMTOPaymentRequests
