--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1091,6 +1091,29 @@ paths:
           description: A server error occurred
           schema:
             $ref: '#/responses/ServerError'
+  /moves/{locator}/payment-requests:
+    parameters:
+      - description: Code used to identify a move in the system
+        in: path
+        name: locator
+        required: true
+        type: string
+    get:
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Successfully returned all moves matching the criteria
+          schema:
+            $ref: '#/definitions/QueuePaymentRequestsResult'
+        '403':
+          description: The request was denied
+          schema:
+            $ref: '#/responses/PermissionDenied'
+        '500':
+          description: A server error occurred
+          schema:
+            $ref: '#/responses/ServerError'
   /queues/payment-requests:
     get:
       produces:
