--- a/config/env/prd.app-client-tls.env
+++ b/config/env/prd.app-client-tls.env
@@ -4,7 +4,6 @@ DB_IAM=true
 DB_NAME=app
 DB_PORT=5432
 DB_SSL_MODE=verify-full
-DEBUG_LOGGING=true
 DEVLOCAL_AUTH=false
 DOD_CA_PACKAGE=/config/tls/Certificates_PKCS7_v5.6_DoD.der.p7b
 DPS_COOKIE_DOMAIN=.sddc.army.mil
@@ -15,6 +14,7 @@ HERE_MAPS_GEOCODE_ENDPOINT=https://geocoder.api.here.com/6.2/geocode.json
 HERE_MAPS_ROUTING_ENDPOINT=https://route.api.here.com/routing/7.2/calculateroute.json
 IWS_RBS_ENABLED=1
 IWS_RBS_HOST=sadr.dmdc.osd.mil
+LOGGING_LEVEL=info
 LOGIN_GOV_HOSTNAME=secure.login.gov
 LOG_TASK_METADATA=true
 MUTUAL_TLS_ENABLED=true
