--- a/config/env/stg.app.env
+++ b/config/env/stg.app.env
@@ -4,7 +4,6 @@ DB_IAM=true
 DB_NAME=app
 DB_PORT=5432
 DB_SSL_MODE=verify-full
-DEBUG_LOGGING=true
 DEBUG_PPROF=false
 DEVLOCAL_AUTH=false
 DOD_CA_PACKAGE=/config/tls/Certificates_PKCS7_v5.6_DoD.der.p7b
@@ -18,6 +17,7 @@ HTTP_SDDC_PORT=443
 HTTP_SDDC_PROTOCOL=https
 IWS_RBS_ENABLED=1
 IWS_RBS_HOST=pkict.dmdc.osd.mil
+LOGGING_LEVEL=info
 LOGIN_GOV_HOSTNAME=idp.int.identitysandbox.gov
 LOG_TASK_METADATA=true
 REDIS_ENABLED=true
