Revert "MB-5060 - Add GovCloud support for SES in devlocal"

--- a/.envrc
+++ b/.envrc
@@ -179,7 +179,7 @@ export AWS_S3_REGION="us-west-2"
 export AWS_DEFAULT_REGION="us-west-2"
 export AWS_S3_KEY_NAMESPACE=$USER
 export AWS_SES_DOMAIN="devlocal.dp3.us"
-export AWS_SES_REGION="us-gov-west-1"
+export AWS_SES_REGION="us-west-2"
 
 # To use cdn links like assets.devlocal.move.mil/xx/user/ for local builds,
 # you'll need to add the following to your .envrc.local:
