--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "@storybook/react": "^5.3.19",
     "@testing-library/react-hooks": "^3.4.2",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
-    "cypress": "~6.0.0",
+    "cypress": "^6.0.0",
     "cypress-wait-until": "^1.7.1",
     "danger": "^10.5.3",
     "danger-plugin-jira-issue": "^1.4.1",
