--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -819,6 +819,17 @@ jobs:
       - run: make client_test_coverage
       - announce_failure
 
+  # `webhook_client_test` runs the webhook client Go tests
+  webhook_client_test:
+    executor: mymove_large
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - go-mod-sources-v2-{{ checksum "go.sum" }}-{{ checksum "scripts/check-go-version" }}
+      - run: make webhook_client_test
+      - announce_failure
+
   # `build_tools` builds the mymove-specific CLI tools in `mymove/cmd`
   build_tools:
     executor: mymove_medium_plus
@@ -1108,6 +1119,37 @@ jobs:
           repo: app-tasks
       - announce_failure
 
+  # `build_webhook_client` builds the webhook client container
+  build_webhook_client:
+    executor: mymove_medium
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: false
+      - run: make bin/rds-ca-2019-root.pem
+      - run: make bin/rds-ca-us-gov-west-1-2017-root.pem
+      - run: make bin/webhook-client
+      - build_image:
+          dockerfile: Dockerfile.webhook_client
+          image_name: webhook_client
+          tag: dev
+          working_dir: ~/transcom/mymove
+      # - announce_failure # TODO(carter): uncomment this once things look like they are working
+
+  # `push_webhook_client_exp` pushes the webhook client container to the exp container repository
+  push_webhook_client_exp:
+    executor: mymove_small
+    steps:
+      - setup_remote_docker:
+          docker_layer_caching: false
+      - aws_vars_exp
+      - push_image:
+          ecr_env: exp
+          image_name: webhook_client
+          tag: dev
+          repo: app-webhook-client
+      # - announce_failure # TODO(carter): uncomment this once things look like they are working
+
   # `deploy_exp_migrations` deploys migrations to the exp environment
   deploy_exp_migrations:
     executor: mymove_small
@@ -1329,6 +1371,10 @@ workflows:
             branches:
               ignore: placeholder_branch_name
 
+      - webhook_client_test:
+          requires:
+            - pre_deps_golang
+
       - build_app:
           requires:
             - anti_virus
@@ -1362,6 +1408,12 @@ workflows:
           requires:
             - build_tasks
 
+      - build_webhook_client:
+          requires:
+            - anti_virus
+            - pre_deps_golang
+            - webhook_client_test
+
       - push_app_exp:
           requires:
             - build_app
@@ -1379,6 +1431,13 @@ workflows:
       - push_tasks_exp:
           requires:
             - build_tasks
+          filters:
+            branches:
+              only: placeholder_branch_name
+
+      - push_webhook_client_exp:
+          requires:
+            - build_webhook_client
           filters:
             branches:
               only: placeholder_branch_name
