Don't hardcode logging level

--- a/.envrc
+++ b/.envrc
@@ -273,6 +273,9 @@ export GOLANGCI_LINT_VERBOSE=""
 
 # Set DB_DEBUG to true for development to enable sql logging
 export DB_DEBUG=1
+# Set the logging level to debug locally. You can override in .envrc.local
+# Other possible values are: info, warn, error, fatal
+export LOGGING_LEVEL=debug
 
 # Anti-Virus Settings
 export AV_DIR="${MYMOVE_DIR}"
