Add role check to handler to verify for TIO role

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -936,6 +936,10 @@ paths:
           description: Successfully retrieved all line items for a move task order
           schema:
             $ref: '#/definitions/PaymentRequests'
+        '403':
+          description: The request was denied
+          schema:
+            $ref: '#/responses/PermissionDenied'
         '404':
           description: The requested resource wasn't found
           schema:
