--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -876,6 +876,47 @@ paths:
       description: Gets entitlements
       operationId: getEntitlements
       summary: Gets entitlements for a move order by ID
+  '/move-task-orders/{moveTaskOrderID}/payment-requests':
+    parameters:
+      - description: ID of move to use
+        in: path
+        name: moveTaskOrderID
+        required: true
+        type: string
+    get:
+      produces:
+        - application/json
+      parameters: []
+      tags:
+        - moveTaskOrder
+      responses:
+        '200':
+          description: Successfully retrieved payment requests
+          schema:
+            $ref: '#/definitions/PaymentRequests'
+        '400':
+          description: The request payload is invalid
+          schema:
+            $ref: '#/responses/InvalidRequest'
+        '401':
+          description: The request was denied
+          schema:
+            $ref: '#/responses/PermissionDenied'
+        '403':
+          description: The request was denied
+          schema:
+            $ref: '#/responses/PermissionDenied'
+        '404':
+          description: The requested resource wasn't found
+          schema:
+            $ref: '#/responses/NotFound'
+        '500':
+          description: A server error occurred
+          schema:
+            $ref: '#/responses/ServerError'
+      description: Get list of all payment requests for a move
+      operationId: getMovePaymentRequests
+      summary: Get list of all payment requests for a move
   '/payment-requests/{paymentRequestID}':
     parameters:
       - description: UUID of payment request
