Add createdAt to payment request payload

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1839,6 +1839,9 @@ definitions:
         format: date-time
         type: string
         x-nullable: true
+      createdAt:
+        format: date-time
+        type: string
     type: object
   PaymentRequests:
     items:
