adding documentation for origin and dest sit items

--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -380,6 +380,48 @@ paths:
 
         To update a service item, please use [updateMTOServiceItem](#operation/updateMTOServiceItem) endpoint.
 
+        ---
+
+        **`MTOServiceItemOriginSIT`**
+
+        MTOServiceItemOriginSIT is a subtype of MTOServiceItem.
+
+        This model type describes a domestic origin SIT service item. Items can be created using this
+        model type with the following codes:
+
+        **DOFSIT**
+
+        **1st day origin SIT service item**. When a DOFSIT is requested, the API will auto-create the following group of service items:
+          * DOFSIT - Domestic origin 1st day SIT
+          * DOASIT - Domestic origin Additional day SIT
+          * DOPSIT - Domestic origin SIT pickup
+
+        **DOASIT**
+
+        **Addt'l day origin SIT service item**. This represents an additional day of storage for the same item.
+        Additional DOASIT service items can be created and added to an existing shipment that **includes a DOFSIT service item**.
+
+        ---
+
+        **`MTOServiceItemDestSIT`**
+
+        MTOServiceItemDestSIT is a subtype of MTOServiceItem.
+
+        This model type describes a domestic destination SIT service item. Items can be created using this
+        model type with the following codes:
+
+        **DDFSIT**
+
+        **1st day origin SIT service item**. When a DOFSIT is requested, the API will auto-create the following group of service items:
+          * DDFSIT - Domestic destination 1st day SIT
+          * DDASIT - Domestic destination Additional day SIT
+          * DDDSIT - Domestic destination SIT delivery
+
+        **DDASIT**
+
+        **Addt'l day destination SIT service item**. This represents an additional day of storage for the same item.
+        Additional DDASIT service items can be created and added to an existing shipment that **includes a DDFSIT service item**.
+
       operationId: createMTOServiceItem
       tags:
         - mtoServiceItem
@@ -1109,7 +1151,23 @@ definitions:
         required:
           - reServiceCode
   MTOServiceItemDestSIT: # spectral oas2-unused-definition is OK here due to polymorphism
-    description: Describes a domestic destination 1st day SIT service item subtype of a MTOServiceItem.
+    description: |
+      MTOServiceItemDestSIT is a subtype of MTOServiceItem.
+
+        This model type describes a domestic destination SIT service item. Items can be created using this
+        model type with the following codes:
+
+        **DDFSIT**
+
+        **1st day origin SIT service item**. When a DOFSIT is requested, the API will auto-create the following group of service items:
+          * DDFSIT - Domestic destination 1st day SIT
+          * DDASIT - Domestic destination Additional day SIT
+          * DDDSIT - Domestic destination SIT delivery
+
+        **DDASIT**
+
+        **Addt'l day destination SIT service item**. This represents an additional day of storage for the same item.
+        Additional DDASIT service items can be created and added to an existing shipment that **includes a DDFSIT service item**.
     allOf:
       - $ref: '#/definitions/MTOServiceItem'
       - type: object
@@ -1213,8 +1271,8 @@ definitions:
       Describes all model sub-types for a MTOServiceItem model.
 
       Using this list, choose the correct modelType in the dropdown, corresponding to the service item type.
-        * DOFSIT - MTOServiceItemOriginSIT
-        * DDFSIT - MTOServiceItemDestSIT
+        * DOFSIT, DOASIT - MTOServiceItemOriginSIT
+        * DDFSIT, DDASIT - MTOServiceItemDestSIT
         * DOSHUT, DDSHUT - MTOServiceItemShuttle
         * DCRT, DCRTSA, DUCRT - MTOServiceItemDomesticCrating
 
@@ -1229,7 +1287,23 @@ definitions:
       - MTOServiceItemDomesticCrating
       - MTOServiceItemSITDeparture
   MTOServiceItemOriginSIT: # spectral oas2-unused-definition is OK here due to polymorphism
-    description: Describes a domestic origin 1st day SIT service item subtype of a MTOServiceItem.
+    description: |
+     MTOServiceItemOriginSIT is a subtype of MTOServiceItem.
+
+        This model type describes a domestic origin SIT service item. Items can be created using this
+        model type with the following codes:
+
+        **DOFSIT**
+
+        **1st day origin SIT service item**. When a DOFSIT is requested, the API will auto-create the following group of service items:
+          * DOFSIT - Domestic origin 1st day SIT
+          * DOASIT - Domestic origin Additional day SIT
+          * DOPSIT - Domestic origin SIT pickup
+
+        **DOASIT**
+
+        **Addt'l day origin SIT service item**. This represents an additional day of storage for the same item.
+        Additional DOASIT service items can be created and added to an existing shipment that **includes a DOFSIT service item**.
     allOf:
       - $ref: '#/definitions/MTOServiceItem'
       - type: object
