removing unnecessary docs

--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -1151,23 +1151,7 @@ definitions:
         required:
           - reServiceCode
   MTOServiceItemDestSIT: # spectral oas2-unused-definition is OK here due to polymorphism
-    description: |
-      MTOServiceItemDestSIT is a subtype of MTOServiceItem.
-
-        This model type describes a domestic destination SIT service item. Items can be created using this
-        model type with the following codes:
-
-        **DDFSIT**
-
-        **1st day origin SIT service item**. When a DOFSIT is requested, the API will auto-create the following group of service items:
-          * DDFSIT - Domestic destination 1st day SIT
-          * DDASIT - Domestic destination Additional day SIT
-          * DDDSIT - Domestic destination SIT delivery
-
-        **DDASIT**
-
-        **Addt'l day destination SIT service item**. This represents an additional day of storage for the same item.
-        Additional DDASIT service items can be created and added to an existing shipment that **includes a DDFSIT service item**.
+    description: Describes a domestic destination SIT service item. Subtype of a MTOServiceItem.
     allOf:
       - $ref: '#/definitions/MTOServiceItem'
       - type: object
@@ -1287,23 +1271,7 @@ definitions:
       - MTOServiceItemDomesticCrating
       - MTOServiceItemSITDeparture
   MTOServiceItemOriginSIT: # spectral oas2-unused-definition is OK here due to polymorphism
-    description: |
-     MTOServiceItemOriginSIT is a subtype of MTOServiceItem.
-
-        This model type describes a domestic origin SIT service item. Items can be created using this
-        model type with the following codes:
-
-        **DOFSIT**
-
-        **1st day origin SIT service item**. When a DOFSIT is requested, the API will auto-create the following group of service items:
-          * DOFSIT - Domestic origin 1st day SIT
-          * DOASIT - Domestic origin Additional day SIT
-          * DOPSIT - Domestic origin SIT pickup
-
-        **DOASIT**
-
-        **Addt'l day origin SIT service item**. This represents an additional day of storage for the same item.
-        Additional DOASIT service items can be created and added to an existing shipment that **includes a DOFSIT service item**.
+    description: Describes a domestic origin SIT service item. Subtype of a MTOServiceItem.
     allOf:
       - $ref: '#/definitions/MTOServiceItem'
       - type: object
