--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -191,12 +191,12 @@ paths:
   '/move-task-orders/hide':
     parameters: []
     get:
-      summary: hideNonFakeMTOs
+      summary: hideNonFakeMoveTaskOrders
       description: |
         Updates move task order without fake user data `show` to false. No request body required. <br />
         <br />
         This is a support endpoint and will not be available in production.
-      operationId: hideNonFakeMTOs
+      operationId: hideNonFakeMoveTaskOrders
       tags:
         - moveTaskOrder
       consumes:
