--- a/package.json
+++ b/package.json
@@ -144,6 +144,8 @@
     "happo.io": "^6.3.0",
     "lodash-webpack-plugin": "^0.11.5",
     "markdown-spellcheck": "^1.3.1",
+    "markdown-toc": "^1.2.0",
+    "md-toc": "^1.0.0",
     "mime-types": "^2.1.27",
     "mockdate": "^3.0.2",
     "prettier": "=2.2.0",
