exec gov-dev explicitly

--- a/.envrc
+++ b/.envrc
@@ -130,7 +130,7 @@ export LOGIN_GOV_ADMIN_CLIENT_ID="urn:gov:gsa:openidconnect.profiles:sp:sso:dod:
 export LOGIN_GOV_ENGADMIN_CLIENT_ID="urn:gov:gsa:openidconnect.profiles:sp:sso:dod:engadminmovemillocal"
 export LOGIN_GOV_HOSTNAME="idp.int.identitysandbox.gov"
 
-require LOGIN_GOV_SECRET_KEY "See 'chamber read app-devlocal login_gov_secret_key'"
+require LOGIN_GOV_SECRET_KEY "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal login_gov_secret_key'"
 
 # JSON Web Token (JWT) config
 CLIENT_AUTH_SECRET_KEY=$(cat config/tls/devlocal-client_auth_secret.key)
@@ -151,8 +151,8 @@ export DOD_CA_PACKAGE="${MYMOVE_DIR}/config/tls/Certificates_PKCS7_v5.6_DoD.der.
 # All of our DoD-signed certs are currently signed by DOD SW CA-54
 # This cannot be changed unless our certs are all resigned
 MOVE_MIL_DOD_CA_CERT=$(cat "${MYMOVE_DIR}"/config/tls/dod-sw-ca-54.pem)
-require MOVE_MIL_DOD_TLS_CERT "See 'chamber read app-devlocal move_mil_dod_tls_cert'"
-require MOVE_MIL_DOD_TLS_KEY "See 'chamber read app-devlocal move_mil_dod_tls_key'"
+require MOVE_MIL_DOD_TLS_CERT "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal move_mil_dod_tls_cert'"
+require MOVE_MIL_DOD_TLS_KEY "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal move_mil_dod_tls_key'"
 export MOVE_MIL_DOD_CA_CERT
 
 # Use UTC timezone
@@ -185,8 +185,8 @@ export AWS_SES_REGION="us-gov-west-1"
 # you'll need to add the following to your .envrc.local:
 #
 #   export STORAGE_BACKEND=cdn
-#   require CLOUD_FRONT_PRIVATE_KEY "See 'chamber read app-devlocal cloud_front_private_key'"
-#   require CLOUD_FRONT_KEY_ID "See 'chamber read app-devlocal cloud_front_key_id'"
+#   require CLOUD_FRONT_PRIVATE_KEY "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal cloud_front_private_key'"
+#   require CLOUD_FRONT_KEY_ID "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal cloud_front_key_id'"
 #
 # To use s3 links aws-bucketname/xx/user/ for local builds,
 # you'll need to add the following to your .envrc.local:
@@ -196,18 +196,18 @@ export AWS_SES_REGION="us-gov-west-1"
 # HERE MAPS API
 export HERE_MAPS_GEOCODE_ENDPOINT="https://geocoder.api.here.com/6.2/geocode.json"
 export HERE_MAPS_ROUTING_ENDPOINT="https://route.api.here.com/routing/7.2/calculateroute.json"
-require HERE_MAPS_APP_ID "See 'chamber read app-devlocal here_maps_app_id'"
-require HERE_MAPS_APP_CODE "See 'chamber read app-devlocal here_maps_app_code'"
+require HERE_MAPS_APP_ID "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal here_maps_app_id'"
+require HERE_MAPS_APP_CODE "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal here_maps_app_code'"
 
 # GEX integration config
 export GEX_BASIC_AUTH_USERNAME="mymovet"
-require GEX_BASIC_AUTH_PASSWORD "See 'chamber read app-devlocal gex_basic_auth_password'"
+require GEX_BASIC_AUTH_PASSWORD "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal gex_basic_auth_password'"
 export GEX_URL=""
 # To actually send the GEX request, replace url in envrc.local with the line below
 # export GEX_URL=https://gexweba.daas.dla.mil/msg_data/submit/
 
-require DPS_AUTH_SECRET_KEY "See 'chamber read app-devlocal dps_auth_secret_key'"
-require DPS_AUTH_COOKIE_SECRET_KEY "See 'chamber read app-devlocal dps_auth_cookie_secret_key'"
+require DPS_AUTH_SECRET_KEY "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal dps_auth_secret_key'"
+require DPS_AUTH_COOKIE_SECRET_KEY "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal dps_auth_cookie_secret_key'"
 export DPS_COOKIE_EXPIRES_IN_MINUTES="240"
 export HTTP_SDDC_PROTOCOL="http"
 export HTTP_SDDC_PORT="8080"
@@ -221,17 +221,17 @@ export IWS_RBS_ENABLED=0
 export IWS_RBS_HOST="pkict.dmdc.osd.mil"
 
 # Unsecured CSRF Auth Key, for local dev only
-require CSRF_AUTH_KEY "See 'chamber read app-devlocal csrf_auth_key'"
+require CSRF_AUTH_KEY "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal csrf_auth_key'"
 
 # Always show Swagger UI in development
 export SERVE_SWAGGER_UI=true
 
 # HAPPO Keys
-require HAPPO_API_KEY "See 'chamber read app-devlocal happo_api_key'"
-require HAPPO_API_SECRET "See 'chamber read app-devlocal happo_api_secret'"
+require HAPPO_API_KEY "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal happo_api_key'"
+require HAPPO_API_SECRET "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal happo_api_secret'"
 
 # EIA API Key (for fuel price data)
-require EIA_KEY "See 'chamber read app-devlocal eia_key'"
+require EIA_KEY "See 'AWS_REGION=us-gov-west-1 aws-vault exec transcom-gov-dev -- chamber read app-devlocal eia_key'"
 export EIA_URL="https://api.eia.gov/series/"
 
 # Listeners
