--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@storybook/addon-docs": "^6.1.10",
+    "@storybook/preset-create-react-app": "^3.1.5",
     "@trussworks/react-file-viewer": "https://github.com/trussworks/react-file-viewer#ds-enable-image-file-type-support",
     "@trussworks/react-uswds": "^1.9.3",
     "bytes": "^3.0.0",
