sets conditional gov-dev aws account based on using S3

--- a/.envrc
+++ b/.envrc
@@ -47,6 +47,9 @@ check_required_variables() {
 #############################
 
 export AWS_VAULT_KEYCHAIN_NAME=login
+# The AWS_PROFILE setting is in the project configuration section
+# because now we're working with multiple accounts.
+
 export AWS_PROFILE=transcom-ppp
 
 #############################
@@ -160,8 +163,8 @@ export TZ="UTC"
 
 # AWS development access
 #
-# To use S3/SES for local builds, you'll need to add the following to
-# your .envrc.local:
+# To use S3/SES for local builds, you'll need to uncomment the following.
+# Do not commit the change:
 #
 #   export STORAGE_BACKEND=s3
 #   export EMAIL_BACKEND=ses
@@ -171,12 +174,14 @@ export TZ="UTC"
 #   export STORAGE_BACKEND=local
 #   export EMAIL_BACKEND=local
 #
-# Your AWS credentials should be setup in the transcom-ppp profile using
-# aws-vault. They will be detected and used by the app automatically.
-export AWS_S3_BUCKET_NAME="transcom-ppp-app-devlocal-us-west-2"
-export AWS_S3_REGION="us-west-2"
-# Setting these regions interacts poorly when using multiple AWS accounts
-export AWS_DEFAULT_REGION="us-west-2"
+# Setting region and profile conditionally while we migrate from com to govcloud.
+if [ "$STORAGE_BACKEND" == "s3" ]; then
+  export AWS_S3_BUCKET_NAME="transcom-gov-dev-app-devlocal-us-gov-west-1"
+  export AWS_S3_REGION="us-gov-west-1"
+  export AWS_DEFAULT_REGION="us-gov-west-1"
+  export AWS_PROFILE=transcom-gov-dev
+fi
+
 export AWS_S3_KEY_NAMESPACE=$USER
 export AWS_SES_DOMAIN="devlocal.dp3.us"
 export AWS_SES_REGION="us-gov-west-1"
