--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
-    "@storybook/addon-docs": "^6.1.10",
-    "@storybook/preset-create-react-app": "^3.1.5",
     "@trussworks/react-file-viewer": "https://github.com/trussworks/react-file-viewer#ds-enable-image-file-type-support",
     "@trussworks/react-uswds": "^1.9.3",
-    "a11y": "^0.5.1",
-    "babel-loader": "^8.2.2",
     "bytes": "^3.0.0",
     "classnames": "^2.2.5",
     "connected-react-router": "^6.8.0",
@@ -121,13 +117,17 @@
     "@rescripts/rescript-env": "^0.0.12",
     "@rescripts/utilities": "^0.0.7",
     "@stoplight/spectral": "^5.7.1",
+    "@storybook/addon-a11y": "^6.1.10",
     "@storybook/addon-actions": "^6.1.10",
+    "@storybook/addon-docs": "^6.1.10",
     "@storybook/addon-knobs": "^6.1.10",
     "@storybook/addon-links": "^6.1.10",
     "@storybook/addon-viewport": "^6.1.10",
     "@storybook/addons": "^6.1.10",
+    "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.10",
     "@testing-library/react-hooks": "^3.4.2",
+    "babel-loader": "^8.2.2",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "cypress": "^6.0.0",
     "cypress-wait-until": "^1.7.1",
