--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "@storybook/addon-a11y": "^6.1.10",
     "@storybook/addon-actions": "^6.1.10",
     "@storybook/addon-docs": "^6.1.10",
+    "@storybook/addon-essentials": "^6.1.10",
     "@storybook/addon-knobs": "^6.1.10",
     "@storybook/addon-links": "^6.1.10",
     "@storybook/addon-viewport": "^6.1.10",
