Upgrade react-scripts to 4

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-last-location": "^2.0.1",
     "react-router-tabs": "^1.1.1",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^4.0.1",
     "react-select": "^3.1.0",
     "react-table": "^7.6.2",
     "react-table-6": "^6.11.0",
@@ -125,7 +125,7 @@
     "@storybook/addon-viewport": "^6.1.10",
     "@storybook/addons": "^6.1.5",
     "@storybook/react": "^5.3.19",
-    "@testing-library/react-hooks": "^3.4.2",
+    "@testing-library/react-hooks": "^3.7.0",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "cypress": "^6.0.0",
     "cypress-wait-until": "^1.7.1",
@@ -134,10 +134,10 @@
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-no-only-tests": "^2.4.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.10.0",
     "happo-plugin-storybook": "^2.7.0",
@@ -148,11 +148,11 @@
     "md-toc": "^1.0.0",
     "mime-types": "^2.1.27",
     "mockdate": "^3.0.2",
-    "prettier": "=2.2.0",
+    "prettier": "2.2.1",
     "react-test-renderer": "^16.14.0",
     "source-map-explorer": "^2.5.0",
     "storybook-addons-abstract": "^5.0.6",
-    "terser-webpack-plugin": "^4.2.3"
+    "terser-webpack-plugin": "^5.0.3"
   },
   "browserslist": [
     ">0.2%",
