--- a/package.json
+++ b/package.json
@@ -90,12 +90,12 @@
   "private": true,
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "build": "rescripts build",
-    "eject": "rescripts eject",
-    "start": "rescripts start",
-    "test": "rescripts test --env=jsdom",
-    "test:debug": "rescripts --inspect-brk test --runInBand --env=jsdom",
-    "test:coverage": "rescripts test --coverage --env=jsdom --watchAll=false --coverageDirectory=coverage",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "start": "react-scripts start",
+    "test": "react-scripts test --env=jsdom",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
+    "test:coverage": "react-scripts test --coverage --env=jsdom --watchAll=false --coverageDirectory=coverage",
     "test:e2e": "cypress open --config baseUrl=http://milmovelocal:3000 --env testClientPort=3000",
     "test:e2e-clean": "make db_dev_e2e_populate; yarn test:e2e",
     "test:e2e-debug": "DEBUG=cypress:server:util:process_profiler cypress open --config baseUrl=http://milmovelocal:3000 --env testClientPort=3000",
@@ -113,9 +113,6 @@
   "devDependencies": {
     "@babel/core": "~7.12.9",
     "@dump247/storybook-state": "^1.6.1",
-    "@rescripts/cli": "^0.0.14",
-    "@rescripts/rescript-env": "^0.0.12",
-    "@rescripts/utilities": "^0.0.7",
     "@stoplight/spectral": "^5.7.1",
     "@storybook/addon-a11y": "^6.1.10",
     "@storybook/addon-actions": "^6.1.5",
