add instructions for using s3 and ses backend to envrc

--- a/.envrc
+++ b/.envrc
@@ -169,6 +169,9 @@ export TZ="UTC"
 #   export STORAGE_BACKEND=s3
 #   export EMAIL_BACKEND=ses
 #
+# Instructions for using S3 storage backend here: https://github.com/transcom/mymove/wiki/Test-Storing-Data-in-S3-in-Devlocal
+# Instructions for using SES email backend here: https://github.com/transcom/mymove/wiki/Test-Sending-Email-in-Devlocal
+#
 # The default and equivalent to not being set is:
 #
 #   export STORAGE_BACKEND=local
