--- a/package.json
+++ b/package.json
@@ -123,7 +123,6 @@
     "@storybook/addons": "^6.1.5",
     "@storybook/react": "^5.3.19",
     "@testing-library/react-hooks": "^3.7.0",
-    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "cypress": "^6.0.0",
     "cypress-wait-until": "^1.7.1",
     "danger": "^10.5.4",
@@ -139,7 +138,6 @@
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.10.0",
     "happo-plugin-storybook": "^2.7.0",
     "happo.io": "^6.3.0",
-    "lodash-webpack-plugin": "^0.11.5",
     "markdown-spellcheck": "^1.3.1",
     "markdown-toc": "^1.2.0",
     "md-toc": "^1.0.0",
@@ -148,8 +146,7 @@
     "prettier": "2.2.1",
     "react-test-renderer": "^16.14.0",
     "source-map-explorer": "^2.5.1",
-    "storybook-addons-abstract": "^5.0.6",
-    "terser-webpack-plugin": "^5.0.3"
+    "storybook-addons-abstract": "^5.0.6"
   },
   "browserslist": [
     ">0.2%",
