--- a/Dockerfile.webhook_client
+++ b/Dockerfile.webhook_client
@@ -3,6 +3,4 @@ FROM gcr.io/distroless/static:latest
 COPY bin/rds-ca-us-gov-west-1-2017-root.pem /bin/rds-ca-us-gov-west-1-2017-root.pem
 COPY bin/webhook-client /bin/webhook-client
 
-ENTRYPOINT ["/bin/webhook-client"]
-
-CMD ["db-webhook-notify"]
+CMD ["/bin/webhook-client", "db-webhook-notify"]
